[project]
name = "lang-graph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "langchain-openapi>=0.1.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.2",
    "python-dotenv>=1.2.2",
]
